src/ocl/oclParser/OclCS/OclParser.cpp

// Generated from OclParser.g4 by ANTLR 4.7


#include "OclParserListener.h"
#include "OclParserVisitor.h"

#include "OclParser.h"


using namespace antlrcpp;
using namespace OclCS;
using namespace antlr4;

OclParser::OclParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

OclParser::~OclParser() {
  delete _interpreter;
}

std::string OclParser::getGrammarFileName() const {
  return "OclParser.g4";
}

const std::vector<std::string>& OclParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& OclParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ExpressionInOclCSContext ------------------------------------------------------------------

OclParser::ExpressionInOclCSContext::ExpressionInOclCSContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OclParser::OclExpressionCSContext* OclParser::ExpressionInOclCSContext::oclExpressionCS() {
  return getRuleContext<OclParser::OclExpressionCSContext>(0);
}


size_t OclParser::ExpressionInOclCSContext::getRuleIndex() const {
  return OclParser::RuleExpressionInOclCS;
}

void OclParser::ExpressionInOclCSContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionInOclCS(this);
}

void OclParser::ExpressionInOclCSContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionInOclCS(this);
}


antlrcpp::Any OclParser::ExpressionInOclCSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OclParserVisitor*>(visitor))
    return parserVisitor->visitExpressionInOclCS(this);
  else
    return visitor->visitChildren(this);
}

OclParser::ExpressionInOclCSContext* OclParser::expressionInOclCS() {
  ExpressionInOclCSContext *_localctx = _tracker.createInstance<ExpressionInOclCSContext>(_ctx, getState());
  enterRule(_localctx, 0, OclParser::RuleExpressionInOclCS);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    oclExpressionCS(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OclExpressionCSContext ------------------------------------------------------------------

OclParser::OclExpressionCSContext::OclExpressionCSContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OclParser::PrefixedExpContext* OclParser::OclExpressionCSContext::prefixedExp() {
  return getRuleContext<OclParser::PrefixedExpContext>(0);
}

OclParser::OperationCallExpCS_BContext* OclParser::OclExpressionCSContext::operationCallExpCS_B() {
  return getRuleContext<OclParser::OperationCallExpCS_BContext>(0);
}

OclParser::PropertyCallExpCS_BContext* OclParser::OclExpressionCSContext::propertyCallExpCS_B() {
  return getRuleContext<OclParser::PropertyCallExpCS_BContext>(0);
}

OclParser::AssociationClassCallExpCS_BContext* OclParser::OclExpressionCSContext::associationClassCallExpCS_B() {
  return getRuleContext<OclParser::AssociationClassCallExpCS_BContext>(0);
}

OclParser::VariableExpCSContext* OclParser::OclExpressionCSContext::variableExpCS() {
  return getRuleContext<OclParser::VariableExpCSContext>(0);
}

OclParser::LiteralExpCSContext* OclParser::OclExpressionCSContext::literalExpCS() {
  return getRuleContext<OclParser::LiteralExpCSContext>(0);
}

OclParser::LetExpCSContext* OclParser::OclExpressionCSContext::letExpCS() {
  return getRuleContext<OclParser::LetExpCSContext>(0);
}

OclParser::IfExpCSContext* OclParser::OclExpressionCSContext::ifExpCS() {
  return getRuleContext<OclParser::IfExpCSContext>(0);
}

OclParser::OclExpressionCSContext* OclParser::OclExpressionCSContext::oclExpressionCS() {
  return getRuleContext<OclParser::OclExpressionCSContext>(0);
}

OclParser::OperationCallExpCS_AContext* OclParser::OclExpressionCSContext::operationCallExpCS_A() {
  return getRuleContext<OclParser::OperationCallExpCS_AContext>(0);
}

OclParser::PropertyCallExpCS_AContext* OclParser::OclExpressionCSContext::propertyCallExpCS_A() {
  return getRuleContext<OclParser::PropertyCallExpCS_AContext>(0);
}

OclParser::AssociationClassCallExpCS_AContext* OclParser::OclExpressionCSContext::associationClassCallExpCS_A() {
  return getRuleContext<OclParser::AssociationClassCallExpCS_AContext>(0);
}

OclParser::IteratorExpCSContext* OclParser::OclExpressionCSContext::iteratorExpCS() {
  return getRuleContext<OclParser::IteratorExpCSContext>(0);
}

OclParser::IterateExpCSContext* OclParser::OclExpressionCSContext::iterateExpCS() {
  return getRuleContext<OclParser::IterateExpCSContext>(0);
}

OclParser::InfixedExpCSContext* OclParser::OclExpressionCSContext::infixedExpCS() {
  return getRuleContext<OclParser::InfixedExpCSContext>(0);
}

OclParser::OclMessageExpCSContext* OclParser::OclExpressionCSContext::oclMessageExpCS() {
  return getRuleContext<OclParser::OclMessageExpCSContext>(0);
}


size_t OclParser::OclExpressionCSContext::getRuleIndex() const {
  return OclParser::RuleOclExpressionCS;
}

void OclParser::OclExpressionCSContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOclExpressionCS(this);
}

void OclParser::OclExpressionCSContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOclExpressionCS(this);
}


antlrcpp::Any OclParser::OclExpressionCSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OclParserVisitor*>(visitor))
    return parserVisitor->visitOclExpressionCS(this);
  else
    return visitor->visitChildren(this);
}


OclParser::OclExpressionCSContext* OclParser::oclExpressionCS() {
   return oclExpressionCS(0);
}

OclParser::OclExpressionCSContext* OclParser::oclExpressionCS(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  OclParser::OclExpressionCSContext *_localctx = _tracker.createInstance<OclExpressionCSContext>(_ctx, parentState);
  OclParser::OclExpressionCSContext *previousContext = _localctx;
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, OclParser::RuleOclExpressionCS, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(135);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(127);
      prefixedExp();
      break;
    }

    case 2: {
      setState(128);
      operationCallExpCS_B();
      break;
    }

    case 3: {
      setState(129);
      propertyCallExpCS_B();
      break;
    }

    case 4: {
      setState(130);
      associationClassCallExpCS_B();
      break;
    }

    case 5: {
      setState(131);
      variableExpCS();
      break;
    }

    case 6: {
      setState(132);
      literalExpCS();
      break;
    }

    case 7: {
      setState(133);
      letExpCS();
      break;
    }

    case 8: {
      setState(134);
      ifExpCS();
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(153);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(151);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(137);

          if (!(precpred(_ctx, 14))) throw FailedPredicateException(this, "precpred(_ctx, 14)");
          setState(138);
          operationCallExpCS_A();
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(139);

          if (!(precpred(_ctx, 12))) throw FailedPredicateException(this, "precpred(_ctx, 12)");
          setState(140);
          propertyCallExpCS_A();
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(141);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(142);
          associationClassCallExpCS_A();
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(143);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(144);
          iteratorExpCS();
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(145);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(146);
          iterateExpCS();
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(147);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(148);
          infixedExpCS();
          break;
        }

        case 7: {
          _localctx = _tracker.createInstance<OclExpressionCSContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleOclExpressionCS);
          setState(149);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(150);
          oclMessageExpCS();
          break;
        }

        } 
      }
      setState(155);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- VariableExpCSContext ------------------------------------------------------------------

OclParser::VariableExpCSContext::VariableExpCSContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OclParser::VariableExpCSContext::SELF() {
  return getToken(OclParser::SELF, 0);
}

OclParser::SimpleNameCSContext* OclParser::VariableExpCSContext::simpleNameCS() {
  return getRuleContext<OclParser::SimpleNameCSContext>(0);
}


size_t OclParser::VariableExpCSContext::getRuleIndex() const {
  return OclParser::RuleVariableExpCS;
}

void OclParser::VariableExpCSContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableExpCS(this);
}

void OclParser::VariableExpCSContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableExpCS(this);
}


antlrcpp::Any OclParser::VariableExpCSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OclParserVisitor*>(visitor))
    return parserVisitor->visitVariableExpCS(this);
  else
    return visitor->visitChildren(this);
}

OclParser::VariableExpCSContext* OclParser::variableExpCS() {
  VariableExpCSContext *_localctx = _tracker.createInstance<VariableExpCSContext>(_ctx, getState());
  enterRule(_localctx, 4, OclParser::RuleVariableExpCS);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(158);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OclParser::SELF: {
        enterOuterAlt(_localctx, 1);
        setState(156);
        match(OclParser::SELF);
        break;
      }

      case OclParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(157);
        simpleNameCS();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpleNameCSContext ------------------------------------------------------------------

OclParser::SimpleNameCSContext::SimpleNameCSContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OclParser::SimpleNameCSContext::ID() {
  return getToken(OclParser::ID, 0);
}


size_t OclParser::SimpleNameCSContext::getRuleIndex() const {
  return OclParser::RuleSimpleNameCS;
}

void OclParser::SimpleNameCSContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSimpleNameCS(this);
}

void OclParser::SimpleNameCSContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSimpleNameCS(this);
}


antlrcpp::Any OclParser::SimpleNameCSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OclParserVisitor*>(visitor))
    return parserVisitor->visitSimpleNameCS(this);
  else
    return visitor->visitChildren(this);
}

OclParser::SimpleNameCSContext* OclParser::simpleNameCS() {
  SimpleNameCSContext *_localctx = _tracker.createInstance<SimpleNameCSContext>(_ctx, getState());
  enterRule(_localctx, 6, OclParser::RuleSimpleNameCS);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    match(OclParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RestrictedKeywordCSContext ------------------------------------------------------------------

OclParser::RestrictedKeywordCSContext::RestrictedKeywordCSContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OclParser::CollectionTypeIdentifierCSContext* OclParser::RestrictedKeywordCSContext::collectionTypeIdentifierCS() {
  return getRuleContext<OclParser::CollectionTypeIdentifierCSContext>(0);
}

OclParser::PrimitiveTypeCSContext* OclParser::RestrictedKeywordCSContext::primitiveTypeCS() {
  return getRuleContext<OclParser::PrimitiveTypeCSContext>(0);
}

OclParser::OclTypeCSContext* OclParser::RestrictedKeywordCSContext::oclTypeCS() {
  return getRuleContext<OclParser::OclTypeCSContext>(0);
}

tree::TerminalNode* OclParser::RestrictedKeywordCSContext::TUPLE() {
  return getToken(OclParser::TUPLE, 0);
}


size_t OclParser::RestrictedKeywordCSContext::getRuleIndex() const {
  return OclParser::RuleRestrictedKeywordCS;
}

void OclParser::RestrictedKeywordCSContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRestrictedKeywordCS(this);
}

void OclParser::RestrictedKeywordCSContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OclParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRestrictedKeywordCS(this);
}


antlrcpp::Any OclParser::RestrictedKeywordCSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OclParserVisitor*>(visitor))
    return parserVisitor->visitRestrictedKeywordCS(this);
  else
    return visitor->visitChildren(this);
}

OclParser::RestrictedKeywordCSContext* OclParser::restrictedKeywordCS() {
  RestrictedKeywordCSContext *_localctx = _tracker.createInstance<RestrictedKeywordCSContext>(_ctx, getState());
  enterRule(_localctx, 8, OclParser::RuleRestrictedKeywordCS);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(166);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OclParser::COLLECTION:
      case OclParser::BAG:
      case OclParser::ORDEREDSET:
      case OclParser::SEQUENCE:
      case OclParser::SET: {
        enterOuterAlt(_localctx, 1);
        setState(162);
        collectionTypeIdentifierCS();
        break;
      }

      case OclParser::OCLBOOLEAN:
      case OclParser::OCLINTEGER:
      case OclParser::OCLREAL:
      case OclParser::OCLSTRING:
      case OclParser::OCLUNLIMITEDNAT: {
        enterOuterAlt(_localctx, 2);
        setState(163);
        primitiveTypeCS();
        break;
      }

      case OclParser::OCLANY:
      case OclParser::OCLINVALID:
      case OclParser::OCLMESSAGE:
      case OclParser::OCLVOID: {
        enterOuterAlt(_localctx, 3);
        setState(164);
        oclTypeCS();
        break;
      }
